style.css
body {
    font-family: Arial, Helvetica, sans-serif;
}

button {
    border-color: black;
    background-color: white;
    border-radius: 5px;
    border: 1.5px solid;
}

#passwordGenerator {
    width: 250px;
}

#passwordBox {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 5px;
}

#passwordOutput {
    width: 100%;
    box-sizing: border-box;
    border: 1.5px solid;
    border-radius: 5px;
}

#lengthControl {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 12px;
    width: 100%;
}

#lengthSlider {
    flex: 1;
}

#optionContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 3px;
    padding: 10px;
    margin-top: -8px;
}

.optionRow {
    display: grid;
    grid-template-columns: 20px 1fr;
    align-items: center;
    width: 180px;
}



#actionButtons {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
}

#actionButtons button {
    flex: 1;
    font-family: Arial, Helvetica, sans-serif;
}

